--- a/readinglist-web-admin/src/main/resources/application-development.properties
+++ b/readinglist-web-admin/src/main/resources/application-development.properties
@@ -10,8 +10,6 @@ spring.datasource.url=jdbc:mysql://localhost:3306/readinglist
 spring.datasource.username=louishan
 spring.datasource.password=louishan
 
-
-
 #spring.jpa.hibernate.ddl-auto=create
 spring.jpa.hibernate.ddl-auto=update
 
@@ -31,3 +29,7 @@ logging.level.org.hibernate.type=trace
 
 management.context-path=/mgmt
 management.security.enabled=false
+
+
+
+rest_client_url=http://localhost:8002
