--- a/readinglist-web-admin/pom.xml
+++ b/readinglist-web-admin/pom.xml
@@ -3,7 +3,7 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<groupId>io.cfapps</groupId>
+	<groupId>com.readinglist</groupId>
 	<artifactId>readinglist-web-admin</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
