--- a/readinglist-web-admin/src/main/resources/application-development.properties
+++ b/readinglist-web-admin/src/main/resources/application-development.properties
@@ -33,3 +33,7 @@ management.security.enabled=false
 
 
 rest_client_url=http://localhost:8002
+books_mgmt_url=http://localhost:8003
+
+#rest_client_url=http://192.168.0.8:8002
+#books_mgmt_url=http://192.168.0.8:8003
