--- a/readinglist-web-admin/src/main/resources/application-production.properties
+++ b/readinglist-web-admin/src/main/resources/application-production.properties
@@ -4,12 +4,12 @@ server.port=8000
 
 spring.datasource.url=jdbc:mysql://readinglist-identifier.cghdskelxyka.ap-northeast-2.rds.amazonaws.com:3306/readinglist
 spring.datasource.username=louishan
+spring.datasource.password=
 
 ###The following line is required in the Cloud Foundry
 #spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
 
 #spring.jpa.hibernate.ddl-auto=update
-
 
 
 
@@ -29,4 +29,5 @@ management.security.enabled=false
 
 
 
-rest_client_url=http://13.124.89.247:8002
+rest_client_url=http://13.124.111.250:8002
+books_mgmt_url=http://13.124.111.250:8003
