--- a/readinglist-web-admin/src/main/resources/application-development.properties
+++ b/readinglist-web-admin/src/main/resources/application-development.properties
@@ -7,8 +7,8 @@ server.port=8000
 
 
 spring.datasource.url=jdbc:mysql://localhost:3306/readinglist
-spring.datasource.username=louishan
-spring.datasource.password=louishan
+spring.datasource.username=root
+spring.datasource.password=1111
 
 #spring.jpa.hibernate.ddl-auto=create
 spring.jpa.hibernate.ddl-auto=update
